# practice-uv-pytorch

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
